--- a/justMall/html/index.html
+++ b/justMall/html/index.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <div class="logo">
-            <img src="../image/Logo.png" alt="Logo">
+            <a href="#"><img src="../image/Logo.png" alt="Logo"></a>
         </div>
         <div class="menubar">
             <a href="#" class="menu">탑</a>
