서브메뉴 내용수정했습니다. 박민정

--- a/justMall/html/index.html
+++ b/justMall/html/index.html
@@ -23,33 +23,35 @@
 
     <nav id="nav">
         <div class="subnavi">
-            <div class="submenu">
-                <h2>탑</h2>
-                <a href="#">리스트1</a>
-                <a href="#">리스트2</a>
-                <a href="#">리스트3</a>
-                <a href="#">리스트4</a>
-            </div>
-            <div class="submenu">
-                <h2>아우터</h2>
-                <a href="#">리스트1</a>
-                <a href="#">리스트2</a>
-                <a href="#">리스트3</a>
-                <a href="#">리스트4</a>
-            </div>
-            <div class="submenu">
-                <h2>팬츠</h2>
-                <a href="#">리스트1</a>
-                <a href="#">리스트2</a>
-                <a href="#">리스트3</a>
-                <a href="#">리스트4</a>
-            </div>
-            <div class="submenu">
-                <h2>악세서리</h2>
-                <a href="#">리스트1</a>
-                <a href="#">리스트2</a>
-                <a href="#">리스트3</a>
-                <a href="#">리스트4</a>
+            <div class="sub-container">
+                <div class="submenu">
+                    <h2>탑</h2>
+                    <a href="#">블라우스</a>
+                    <a href="#">티</a>
+                    <a href="#">셔츠</a>
+                    <a href="#">니트</a>
+                </div>
+                <div class="submenu">
+                    <h2>아우터</h2>
+                    <a href="#">자켓</a>
+                    <a href="#">코트</a>
+                    <a href="#">가디건</a>
+                    <a href="#">머플러</a>
+                </div>
+                <div class="submenu">
+                    <h2>팬츠</h2>
+                    <a href="#">청바지</a>
+                    <a href="#">짧은바지</a>
+                    <a href="#">긴바지</a>
+                    <a href="#">레깅스</a>
+                </div>
+                <div class="submenu">
+                    <h2>악세서리</h2>
+                    <a href="#">귀걸이</a>
+                    <a href="#">목걸이</a>
+                    <a href="#">반지</a>
+                    <a href="#">팔찌</a>
+                </div>
             </div>
         </div>
     </nav>
