메뉴바 부분수정-태현

--- a/justMall/html/index.html
+++ b/justMall/html/index.html
@@ -19,42 +19,39 @@
             <a href="#" class="menu">팬츠</a>
             <a href="#" class="menu">악세서리</a>
         </div>
-    </header>
-
-    <nav id="nav">
-        <div class="subnavi">
-            <div class="sub-container">
-                <div class="submenu">
-                    <h2>탑</h2>
-                    <a href="#">블라우스</a>
-                    <a href="#">티</a>
-                    <a href="#">셔츠</a>
-                    <a href="#">니트</a>
-                </div>
-                <div class="submenu">
-                    <h2>아우터</h2>
-                    <a href="#">자켓</a>
-                    <a href="#">코트</a>
-                    <a href="#">가디건</a>
-                    <a href="#">머플러</a>
-                </div>
-                <div class="submenu">
-                    <h2>팬츠</h2>
-                    <a href="#">청바지</a>
-                    <a href="#">짧은바지</a>
-                    <a href="#">긴바지</a>
-                    <a href="#">레깅스</a>
-                </div>
-                <div class="submenu">
-                    <h2>악세서리</h2>
-                    <a href="#">귀걸이</a>
-                    <a href="#">목걸이</a>
-                    <a href="#">반지</a>
-                    <a href="#">팔찌</a>
-                </div>
+        <nav id="nav">
+            <div class="subnavi">
+                    <div class="submenu">
+                        <h2>탑</h2>
+                        <a href="#">블라우스</a>
+                        <a href="#">티</a>
+                        <a href="#">셔츠</a>
+                        <a href="#">니트</a>
+                    </div>
+                    <div class="submenu">
+                        <h2>아우터</h2>
+                        <a href="#">자켓</a>
+                        <a href="#">코트</a>
+                        <a href="#">가디건</a>
+                        <a href="#">머플러</a>
+                    </div>
+                    <div class="submenu">
+                        <h2>팬츠</h2>
+                        <a href="#">청바지</a>
+                        <a href="#">짧은바지</a>
+                        <a href="#">긴바지</a>
+                        <a href="#">레깅스</a>
+                    </div>
+                    <div class="submenu">
+                        <h2>악세서리</h2>
+                        <a href="#">귀걸이</a>
+                        <a href="#">목걸이</a>
+                        <a href="#">반지</a>
+                        <a href="#">팔찌</a>
+                    </div>
             </div>
-        </div>
-    </nav>
+        </nav>
+    </header>
 
     <aside>
         <img src="../image/슬라이드1.jpg" alt="쇼핑몰 이미지">
@@ -88,23 +85,29 @@
             </div>
         </div>
         <div class="banner">
-            <a href="#"><img src="../image/banner.png" alt="배너"></a>  
+            <a href="#"><img src="../image/banner.png" alt="배너"></a>
         </div>
         <div class="shortcut">
-            <a href="#"><div class="imgbox">
-                <img src="../image/교통편예약.png" alt="교통편 예약">
-                <p>교통편 예약</p>
-            </div></a>
+            <a href="#">
+                <div class="imgbox">
+                    <img src="../image/교통편예약.png" alt="교통편 예약">
+                    <p>교통편 예약</p>
+                </div>
+            </a>
 
-            <a href="#"><div class="imgbox">
-                <img src="../image/룸서비스.png" alt="숙소 예약">
-                <p>숙소 예약</p>
-            </div></a>
+            <a href="#">
+                <div class="imgbox">
+                    <img src="../image/룸서비스.png" alt="숙소 예약">
+                    <p>숙소 예약</p>
+                </div>
+            </a>
 
-            <a href="#"><div class="imgbox">
-                <img src="../image/맛집탐방.png" alt="식사 예약">
-                <p>식사 예약</p>
-            </div></a>
+            <a href="#">
+                <div class="imgbox">
+                    <img src="../image/맛집탐방.png" alt="식사 예약">
+                    <p>식사 예약</p>
+                </div>
+            </a>
         </div>
     </div>
     <footer>
