imgbox hover 효과 추가 / notice 부분 디테일 및 클릭 시 색상변경 기능 추가

--- a/justMall/html/index.html
+++ b/justMall/html/index.html
@@ -20,34 +20,34 @@
             <a href="#" class="menu">악세서리</a>
             <nav id="nav">
                 <div class="subnavi">
-                        <div class="submenu">
-                            <h2>탑</h2>
-                            <a href="#">블라우스</a>
-                            <a href="#">티</a>
-                            <a href="#">셔츠</a>
-                            <a href="#">니트</a>
-                        </div>
-                        <div class="submenu">
-                            <h2>아우터</h2>
-                            <a href="#">자켓</a>
-                            <a href="#">코트</a>
-                            <a href="#">가디건</a>
-                            <a href="#">머플러</a>
-                        </div>
-                        <div class="submenu">
-                            <h2>팬츠</h2>
-                            <a href="#">청바지</a>
-                            <a href="#">짧은바지</a>
-                            <a href="#">긴바지</a>
-                            <a href="#">레깅스</a>
-                        </div>
-                        <div class="submenu">
-                            <h2>악세서리</h2>
-                            <a href="#">귀걸이</a>
-                            <a href="#">목걸이</a>
-                            <a href="#">반지</a>
-                            <a href="#">팔찌</a>
-                        </div>
+                    <div class="submenu">
+                        <h2>탑</h2>
+                        <a href="#">블라우스</a>
+                        <a href="#">티</a>
+                        <a href="#">셔츠</a>
+                        <a href="#">니트</a>
+                    </div>
+                    <div class="submenu">
+                        <h2>아우터</h2>
+                        <a href="#">자켓</a>
+                        <a href="#">코트</a>
+                        <a href="#">가디건</a>
+                        <a href="#">머플러</a>
+                    </div>
+                    <div class="submenu">
+                        <h2>팬츠</h2>
+                        <a href="#">청바지</a>
+                        <a href="#">짧은바지</a>
+                        <a href="#">긴바지</a>
+                        <a href="#">레깅스</a>
+                    </div>
+                    <div class="submenu">
+                        <h2>악세서리</h2>
+                        <a href="#">귀걸이</a>
+                        <a href="#">목걸이</a>
+                        <a href="#">반지</a>
+                        <a href="#">팔찌</a>
+                    </div>
                 </div>
             </nav>
         </div>
@@ -63,8 +63,8 @@
     </aside>
     <div class="content">
         <div class="notice">
-            <div class="noticebox"><a href="#">공지사항</a></div>
-            <div class="gallery"><a href="#">갤러리</a></div>
+            <div class="noticebox" id="noticebox" onclick="noticeClick(this)"><a href="#">공지사항</a></div>
+            <div class="gallery" id="gallery" onclick="noticeClick(this)"><a href="#">갤러리</a></div>
             <div class="noticemsgbox">
                 <div class="msg">
                     <a href="#">라이온 브랜드위크 이벤트 당첨자</a>
@@ -126,6 +126,7 @@
             <a href="#"><img src="../image/Youtube.png" alt="Youtube"></a>
         </div>
     </footer>
+    <script src="../js/script.js"></script>
 </body>
 
 </html>
