홈페이지 작업 끝

--- a/justMall/html/index.html
+++ b/justMall/html/index.html
@@ -56,8 +56,8 @@
     <aside>
         <img src="../image/슬라이드1.jpg" alt="쇼핑몰 이미지">
         <div class="sidebox">
-            <p>어메이징한</p>
-            <p>50% 할인</p>
+            어메이징한<br>
+            50% 할인
         </div>
 
     </aside>
