--- a/justMall/html/index.html
+++ b/justMall/html/index.html
@@ -26,7 +26,7 @@
                         <a href="#">블라우스</a>
                         <a href="#">티</a>
                         <a href="#">셔츠</a>
-                        <a href="#">니트</a>
+                        <a href="#">니트 g</a>
                     </div>
                     <div class="submenu">
                         <h2>아우터</h2>
